--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -102,7 +102,7 @@ Participants will be encouraged to develop their own classification pipeline, fo
 <a id="project3"></a>
 ## Project 3: Network analysis of the electrical activity of the brain during epileptic seizures
 
-#### Authors: Jarosław Klamut, MSc<sup>1</sup> <a href="mailto:jaroslaw.klamut@fuw.edu.pl><i class="fa fa-envelope"></i></a> / Mateusz Wiliński
+#### Authors: Jarosław Klamut, MSc <sup>1</sup> <a href="mailto:jaroslaw.klamut@fuw.edu.pl"><i class="fa fa-envelope"></i></a> / Mateusz Wiliński
 
 1. Faculty of Physics, University of Warsaw, Poland
 
@@ -140,7 +140,7 @@ Epilepsy is a highly prevalent disorder. 1% of all emergency department visits i
 <a id="project4"></a>
 ## Project 4: Deep Frankenstein: dissecting and sewing artificial neural networks
 
-#### Authors: Piotr Migdał, PhD<sup>1</sup> <a href="mailto:pmigdal@gmail.com">i class="fa fa-envelope"></i></a>  
+#### Authors: Piotr Migdał, PhD<sup>1</sup> <a href="mailto:pmigdal@gmail.com"><i class="fa fa-envelope"></i></a>  
 
 1. p.migdal.pl
 
