--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -259,7 +259,7 @@ multidimensionality and timescales”)
 2. Faculty of Psychology, University of Warsaw, Poland
 
 **Abstract:**
-The human brain organization might be characterized by two basic properties: the segregation and the integration (Friston, 1994). While the functional segregation describes specialization of the brain areas or networks, the functional integration provides an insight on how information between specialized areas/networks is integrated. This second property is frequently studied by observing brain connectivity patterns. In recent years, one type of connectivity namely functional connectivity has gained a great attention. In fact, actually this concept is not directly associated with biologically-rooted connections (for example, long-range white matter tracts) but rather with the similarity between time-series of BOLD, EEG or other neuroimaging signals. It follows logic: if signals from two brain areas are similar, these two brain regions are involved in processing similar information and thus, they are functionally connected. Most often, such functional connections are assessed with measures like the Pearson correlation. However, relatively smaller number of studies deal with measures directly associated with temporal structures in the data (e.g. mutual information etc.). In our project, we would like to develop a method introduced by Lombardi et al. (2017) for estimating functional connectivity patterns known from the Dynamical Systems Theory - cross Recurrence Quantification Analysis (cRQA). cRQA is a method which find application in analyzing coupling dynamical systems such as social interactions in dyads, interdependence of EEG signals etc. It allows presenting complex interactions in the simple form of a vector of measures describing properties of time-series related to state-switching. Following observations by Lombardi et al. (2017), we aim to compare obtained connectivity patterns defined by the cRQA with connectivity patterns obtained with the Pearson Correlation. We will use task-fMRI data from procedures testing different cognitive and emotional processes as well as resting-state fMRI data taken from the Human Connectome Project database.
+The human brain organization might be characterized by two basic properties: the segregation and the integration (Friston, 1994). While the functional segregation describes specialization of the brain areas or networks, the functional integration provides an insight on how information between specialized areas/networks is integrated. This second property is frequently studied by observing brain connectivity patterns. In recent years, one type of connectivity namely functional connectivity has gained a great attention. In fact, actually this concept is not directly associated with biologically-rooted connections (for example, long-range white matter tracts) but rather with the similarity between time-series of BOLD, EEG or other neuroimaging signals. It follows logic: if signals from two brain areas are similar, these two brain regions are involved in processing similar information and thus, they are functionally connected. Most often, such functional connections are assessed with measures like the Pearson correlation. However, relatively smaller number of studies deal with measures directly associated with temporal structures in the data (e.g. mutual information etc.). In our project, we would like to develop a method introduced by Lombardi et al. (2017) for estimating functional connectivity patterns known from the Dynamical Systems Theory - cross Recurrence Quantification Analysis (cRQA). cRQA is a method which find application in analyzing coupling dynamical systems such as social interactions in dyads, interdependence of EEG signals etc. It allows presenting complex interactions in the simple form of a vector of measures describing state-switching properties of time-series. Following observations by Lombardi et al. (2017), we aim to compare obtained connectivity patterns defined by the cRQA with connectivity patterns obtained with the Pearson Correlation. We will use task-fMRI data from procedures testing different cognitive and emotional processes as well as resting-state fMRI data taken from the Human Connectome Project database.
 
 **A list of 1-5 key papers summarising the subject:**
 1. Lombardi, A., Tangaro, S., Bellotti, R., Bertolino, A., Blasi, G., Pergola, G., … Guaragnella, C. (2017). A Novel Synchronization-Based Approach for Functional Connectivity Analysis. Complexity, 2017, 1–12. https://doi.org/10.1155/2017/7190758
