--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -318,7 +318,7 @@ Can gain experience with biosignal experimental setups.
 
 #### Authors: Daniel Borek <sup>1</sup> <a href="mailto:p.pierzchlewic@student.uw.edu.pl"><i class="fa fa-envelope"></i></a>
 
-1. University of Warsaw, Faculty of Physics, Poland
+1. Department of Data Analysis, Faculty of Psychology and Educational Sciences, Ghent University, Ghent, Belgium
 
 **Abstract:**
 Social media are one of the most important ways of share ideas and information in modern world. Many cognitive scientists, psychologists, open science advocates are users of Twitter and  other social networks as well. Many  of the ideas  shaping modern psychology are disseminated parallel to journal publishing through the online discussion between scientists.
