--- a/_posts/2017-07-08-register.md
+++ b/_posts/2017-07-08-register.md
@@ -15,14 +15,14 @@ color: white
 
 ### Registration form is available [here](https://docs.google.com/forms/d/e/1FAIpQLSddlhiyNjpdJ6s_qCEPAhR0_K2jW06Q4lktpAHW_SXzROIAXw/viewform)
 
-Registration will take place in three rounds and  there will be small  registration fee for the project participants (to cover the catering during the event):
+Registration will take place in three rounds and there will be small registration fee (to cover the catering during the event) for the project participants:
 * **EARLY** -> *21.01* - *03.02* -> 100 zł
 * **REGULAR** -> *04.02* - *17.02* -> 120 zł
 * **LATE** -> *18.02* - *24.02* -> 135 zł
 
 Soon we will give you information on where to pay fees.
 
-If you have any questions about fees, please write to us: [brainhackwarsaw@gmail.com](mailto:brainhackwarsaw@gmail.com)
+If you have any questions or queries about fees, please write to us: [brainhackwarsaw@gmail.com](mailto:brainhackwarsaw@gmail.com)
 
 And here is a list of friendly hotels where you get a 15% discount on the slogan: **brainhack**
 *
