--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -151,6 +151,7 @@ In this project we are going to explore which kind of information is being proce
 
 And, in the absence of any ethics commission for artificial neural networks, we will cut two networks, sew them, and see is this frankensteinian model is able to recognize images.
 
+![test image size]({{ site.url }}/img/projects/project4.png?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}
 
 **A list of 1-5 key papers/materials summarising the subject:**
 1. Chris Olah et al., “Feature Visualization”, Distill, https://distill.pub/2017/feature-visualization/
@@ -159,6 +160,7 @@ And, in the absence of any ethics commission for artificial neural networks, we 
 4. Daniel L. K. Yamins et al., “Performance-optimized hierarchical models predict neural responses in higher visual cortex”, https://www.pnas.org/content/111/23/8619
 
 **A list of requirements for taking part in the project:**
+* VERY, VERY IMPORTANT: if you do not get familiar with it, you will not be allowed into the project: https://deepsense.ai/deep-learning-hands-on-image-classification/
 * communicative English,
 * bring computer
 
