--- a/_posts/2017-07-08-register.md
+++ b/_posts/2017-07-08-register.md
@@ -28,11 +28,12 @@ And here is a list of friendly hotels where you get a discount:
 * Moon Hostel - 10% discount but remember to rely on participation in Brainhack
 * Lwowska Hostel- reservaation only by rezerwacja@hostellwowska11.pl, for 4-person room you get 55 PLN per person and 50 PLN per person in 6-person room on code: *Brainhack*
 * Mish Mash Hostel - reservation by mishmashhostel.com, for 1-3.03 and code *MMBrainhack2019* you get 10% discount
--->
-<!--
-* Tatamka Hostel -
-* Soundgarden Hotel
+* Tatamka Hostel - 10% discount on phone reservations with the password of *brainhack*
 
+-->
+
+<!--
+* Soundgarden Hotel -
 -->
 
 
