--- a/_posts/2017-07-01-intro.md
+++ b/_posts/2017-07-01-intro.md
@@ -5,7 +5,7 @@ color: main_gray
 style: center
 ---
 
-![Brainhack Warsaw](img/bhw2019_logo_www_N.png)
+![Brainhack Warsaw](img/banner-fb.png)
 
 ## Let's Brainhack!
 
