--- a/_posts/2017-07-08-register.md
+++ b/_posts/2017-07-08-register.md
@@ -17,15 +17,17 @@ Registration will take place in three rounds and there will be small registratio
 * **REGULAR** -> *04.02* - *17.02* -> 120 PLN
 * **LATE** -> *18.02* - *24.02* -> 135 PLN
 
+**PLEASE NOTE:** the first round is paid after qualifying, second and third immediately
+
 Soon we will give you information on where to pay fees.
 
 If you have any questions or queries about fees, please write to us: [brainhackwarsaw@gmail.com](mailto:brainhackwarsaw@gmail.com)
 
 And here is a list of friendly hotels where you get a discount:
-* Moon Hostel - 10% discount but remember to rely on participation in Brainhack
-* Lwowska Hostel- reservaation only by rezerwacja@hostellwowska11.pl, for 4-person room you get 55 PLN per person and 50 PLN per person in 6-person room on code: *Brainhack*
-* Mish Mash Hostel - reservation by mishmashhostel.com, for 1-3.03 and code *MMBrainhack2019* you get 10% discount
-* Tatamka Hostel - 10% discount on phone reservations with the password of *brainhack*
+* <u>Moon Hostel</u> - 10% discount but remember to rely on participation in Brainhack
+* <u>Lwowska Hostel</u>- reservaation only by rezerwacja@hostellwowska11.pl, for 4-person room you get 55 PLN per person and 50 PLN per person in 6-person room on code: **Brainhack**
+* <u>Mish Mash Hostel</u> - reservation by mishmashhostel.com, for 1-3.03 and code **MMBrainhack2019** you get 10% discount
+* <u>Tatamka Hostel</u> - 10% discount on phone reservations with the password of **brainhack**
 
 
 <!--
