--- a/_posts/2017-07-08-register.md
+++ b/_posts/2017-07-08-register.md
@@ -24,10 +24,10 @@ Soon we will give you information on where to pay fees.
 If you have any questions or queries about fees, please write to us: [brainhackwarsaw@gmail.com](mailto:brainhackwarsaw@gmail.com)
 
 And here is a list of friendly hotels where you get a discount:
-* <u>Moon Hostel</u> - 10% discount but remember to rely on participation in Brainhack
-* <u>Lwowska Hostel</u>- reservaation only by rezerwacja@hostellwowska11.pl, for 4-person room you get 55 PLN per person and 50 PLN per person in 6-person room on code: **Brainhack**
-* <u>Mish Mash Hostel</u> - reservation by mishmashhostel.com, for 1-3.03 and code **MMBrainhack2019** you get 10% discount
-* <u>Tatamka Hostel</u> - 10% discount on phone reservations with the password of **brainhack**
+* **Moon Hostel** - 10% discount but remember to rely on participation in Brainhack
+* **Lwowska Hostel** - reservaation only by rezerwacja@hostellwowska11.pl, for 4-person room you get 55 PLN per person and 50 PLN per person in 6-person room on code: <u>Brainhack</u>
+* **Mish Mash Hostel** - reservation by mishmashhostel.com, for 1-3.03 and code <u>MMBrainhack2019</u> you get 10% discount
+* **Tatamka Hostel** - 10% discount on phone reservations with the password of <u>brainhack</u>
 
 
 <!--
