--- a/_posts/2017-07-08-register.md
+++ b/_posts/2017-07-08-register.md
@@ -19,11 +19,11 @@ Registration will take place in three rounds and there will be small registratio
 
 **PLEASE NOTE:** the first round is paid after qualifying, second and third immediately
 
-Soon we will give you information on where to pay fees.
+Payment details will be available soon.
 
 If you have any questions or queries about fees, please write to us: [brainhackwarsaw@gmail.com](mailto:brainhackwarsaw@gmail.com)
 
-And here is a list of friendly hotels where you get a discount:
+For your convenience we prepared a list of nice and friendly hotels where you get a special Brainhack Warsaw discount:
 * **Moon Hostel** - 10% discount but remember to rely on participation in Brainhack
 * **Lwowska Hostel** - reservaation only by rezerwacja@hostellwowska11.pl, for 4-person room you get 55 PLN per person and 50 PLN per person in 6-person room on code: <u>Brainhack</u>
 * **Mish Mash Hostel** - reservation by mishmashhostel.com, for 1-3.03 and code <u>MMBrainhack2019</u> you get 10% discount
