--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -140,9 +140,10 @@ Epilepsy is a highly prevalent disorder. 1% of all emergency department visits i
 <a id="project4"></a>
 ## Project 4: Deep Frankenstein: dissecting and sewing artificial neural networks
 
-#### Authors: Piotr Migdał, PhD<sup>1</sup> <a href="mailto:pmigdal@gmail.com"><i class="fa fa-envelope"></i></a>  
+#### Authors: Piotr Migdał, PhD<sup>1</sup> <a href="mailto:pmigdal@gmail.com"><i class="fa fa-envelope"></i></a>  / Katarzyna Kańska <sup>2</sup>
 
 1. p.migdal.pl
+2. Faculty of Mathematics, Informatics, and Mechanics, University of Warsaw, Poland
 
 **Abstract:**
 Convolutional neural networks are the state-of-the-art solution for image classification. They are able to recognize images at near-human (or occasionally: super-human) level. Their basic units are very different from the biological ones. Each layer is an array, for processing we use convolutions and matrix multiplications, and for gating - simple mathematical functions. Yet, the global architecture of local, hierarchical processing was inspired by mammalian visual cortex.
