--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -41,6 +41,8 @@ It is believed that diseases as AD and PD are spread by misfolded proteins or ag
 A previous study investigated this mechanism on connectome comparing simulated tau deposits on connectome to those detected by PET scans specific for Alzheimer’s [3]. In this project, we aim at carrying out a similar study bu t for PD. In particular, we want to simulate deposits/spreading of alpha-syn proceeding via the brain’s anatomic connectivity network.
 We will use human and mice data provided by the supervisors. The main challenge of the project is defining a proper model of spreading along the connectome. Data from the PPMI dataset (https://www.ppmi-info.org/access-data-specimens/) and given by the project supervisors will be given. Those include case (PD patients) and control subjects along with clinical data and genetics.
 
+![test image size]({{ site.url }}/img/projects/project1.png?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}
+
 **A list of 1-5 key papers/materials summarising the subject**:
 1. Griffa, Alessandra, et al. "Structural connectomics in brain diseases." Neuroimage 80 (2013): 515-526. https://www.sciencedirect.com/science/article/pii/S1053811913004035
 2. Friston, Karl, Rosalyn Moran, and Anil K. Seth. "Analysing connectivity with Granger causality and dynamic causal modelling." Current opinion in neurobiology 23.2 (2013): 172-178. https://www.sciencedirect.com/science/article/pii/S0959438812001845
