--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -163,9 +163,14 @@ And, in the absence of any ethics commission for artificial neural networks, we 
 4. Daniel L. K. Yamins et al., “Performance-optimized hierarchical models predict neural responses in higher visual cortex”, https://www.pnas.org/content/111/23/8619
 
 **A list of requirements for taking part in the project:**
-* VERY, VERY IMPORTANT: if you do not get familiar with it, you will not be allowed into the project: https://deepsense.ai/deep-learning-hands-on-image-classification/
-* communicative English,
-* bring computer
+* I assume at least basic experience with programming and Python. If not yet, I gathered some materials there:
+https://p.migdal.pl/2016/03/15/data-science-intro-for-math-phys-background.html
+* To get overview of deep learning for image classification, I suggest reading my blog post:
+https://p.migdal.pl/2017/04/30/teaching-deep-learning.html
+* Please, read and run code (on Kaggle, Neptune or your local computer) for:
+https://deepsense.ai/keras-vs-pytorch-avp-transfer-learning/
+* I really encourage you to try transfer learning (in either Keras or PyTorch) for a different dataset (pick any, e.g. chihuahua or muffin) and send screenshots of a few classified, and misclassified examples (along with their probabilities). In case there is more people interested in this project than spots, I will use it as a qualification criterion.
+* If you have any questions, feel invited to email me!
 
 **Skills and competences to be acquired during the project:**
 * Insight into the inner workings of deep learning (artificial neural networks) and analogies with biological image processing
