--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -104,9 +104,10 @@ Participants will be encouraged to develop their own classification pipeline, fo
 <a id="project3"></a>
 ## Project 3: Network analysis of the electrical activity of the brain during epileptic seizures
 
-#### Authors: Jarosław Klamut, MSc <sup>1</sup> <a href="mailto:jaroslaw.klamut@fuw.edu.pl"><i class="fa fa-envelope"></i></a> / Mateusz Wiliński
+#### Authors: Jarosław Klamut, MSc <sup>1</sup> <a href="mailto:jaroslaw.klamut@fuw.edu.pl"><i class="fa fa-envelope"></i></a> / Mateusz Wiliński, MSc <sup>2</sup>
 
 1. Faculty of Physics, University of Warsaw, Poland
+2. Scuola Normale Superiore di Pisa, Italy
 
 **Abstract:**
 The recent development in Network Science had a significant impact on many fields of science. Networks proved to be suitable tools in describing a variety of complex systems, brain being one of them. So-called brain networks, based mainly on fMRI or EEG signals, were characterized by a non-trivial hierarchical structure [1]. Interestingly, it was shown that neurological and psychiatric disorders are often accompanied by significant changes in this characteristic structure [2].
@@ -114,6 +115,8 @@ The recent development in Network Science had a significant impact on many field
 Despite initial successes, there is still a number of bottlenecks in the brain networks analysis. In particular, how to properly estimate connections between different parts of the brain? More specifically, how to get rid of bias imposed by volume conduction or active reference electrode? This bias, that affects all signal simultaneously is often referred to as the problem of common sources. It is widely accepted that neuronal synchrony is a good measure of functional integrity in the brain. There are, however, many ways to estimate it. Recent results suggest that methods based on Phase Lag Index are well suited when using EEG data. They were shown to successfully diminish bias from common sources and give better results both for synthetic and real data [3].
 
 Epilepsy is a highly prevalent disorder. 1% of all emergency department visits in USA are caused by epilepsy. In 2004 it resulted in around $ 17 billion of economic costs in Europe, 2 billion in India and $ 1 billion in USA. Yet the brain activity during seizures is still not well explained in the scientific literature. Its connection to brain electrical activity makes it natural to choose EEG as an experimental tool to collect the data suitable for diagnosis. In the project, we will provide with EEG datasets from patients with epilepsy and we will attempt to determine whether the brain network structure changes during epileptic seizures. In order to approach this question, we will use Phase Lag Index based measures. Finally, we would like to determine whether the network characteristics may be more successful in distinguishing or even predicting, different epileptic states, in comparison with classical indicators, such as the signal variance.
+
+![test image size]({{ site.url }}/img/projects/project3.jpg?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}
 
 **A list of 1-6 key papers/materials summarising the subject:**
 1. Meunier, D., Lambiotte, R., & Bullmore, E. T. (2010). Modular and hierarchically modular organization of brain networks. Frontiers in neuroscience, 4, 200.
