Project 9 edited description

--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -333,15 +333,15 @@ Can gain experience with biosignal experimental setups.
 
 1. Department of Data Analysis, Faculty of Psychology and Educational Sciences, Ghent University, Ghent, Belgium
 
-**Abstract:**
-Social media are one of the most important ways of share ideas and information in modern world. Many cognitive scientists, psychologists, open science advocates are users of Twitter and  other social networks as well. Many  of the ideas  shaping modern psychology are disseminated parallel to journal publishing through the online discussion between scientists.
+**Abstract:** Many active scientist use online social networks to share their research . Many  of the ideas  shaping modern science are disseminated   this way. Online discussions between  scientists precede and often shape what is  published in journals. 
 
-This project aims to map the relationships between different members of the related communities and how they influence and share ideas between each other. Is it possible to map the structure of the field and "hot" topics using mostly Twitter data? How the information about publications spread? What define that the paper will become popular(apart scientific merit)? These questions are specially relevant for disciplines such as history and philosophy of science (HPS) trying to map development of scientific ideas through history. These questions are also important for researchers, who want to get informed and share their research to others in the most effective way.
-In this project, we start from  gathering and preprocessing  the data from Twitter (possible problems could involve limitations imposed on downloading  data from service), process, analyze and  try to visualize using open general languages like R or Python but also Gephi and others.
-The simplest analysis will be mapping connections (“following relation”)  between scientist-users from different sub-disciplines using  some simple graph theoretical measures.
-The  further direction of analysis of interactions of the users will depends on availability of the data.
-The project  description soon be accompanied  by small demo, showing one of possible directions of the analysis.
-Other ideas how  to analyse scientist public online presence are also welcome.
+ This project aims to map relations and mutual influence in  online science communities. Is it possible to map the structure of the field and  “hot” topics using mostly Twitter data? How the information about  publications spread? What define that the paper will become  popular (apart scientific merit)?  
+
+ These questions  are  relevant  not only for disciplines such as sociology of science. Also answers could inform  those, who want to share their research to others in the most effective way. Psychology and neuroscience  community, due to transient changes and  interesting  field to study. It  involves, inter alia,   replication  crisis and methodological discussions 
+
+ The project  could use  existing [dataset](<https://www.altmetric.com/blog/twitter-in-scholarly-communication/>) . We will also download relevant  data directly from Twitter to answer  specific problems. Please remember that there are some limitations imposed on  downloading  data from service.  We will process and analyze data   using open  languages like R or Python. We could use  Gephi for visualizations. Example analysis could involve simple graph-theoretical measures to map relation  between different sub-disciplines. 
+
+ Further direction for the analysis will depend on participants and availability of data.  The project  description soon be accompanied  by small demo. Other ideas how  to analyze  public online presence of scientist are also  welcome. 
 
 
 **A list of 1-6 key papers / online materials summarising the subject:**
