Project 9 edited description

--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -341,7 +341,7 @@ Can gain experience with biosignal experimental setups.
 
  The project  could use  existing [dataset](<https://www.altmetric.com/blog/twitter-in-scholarly-communication/>) . We will also download relevant  data directly from Twitter to answer  specific problems. Please remember that there are some limitations imposed on  downloading  data from service.  We will process and analyze data   using open  languages like R or Python. We could use  Gephi for visualizations. Example analysis could involve simple graph-theoretical measures to map relation  between different sub-disciplines. 
 
- Further direction for the analysis will depend on participants and availability of data.  The project  description soon be accompanied  by small demo. Other ideas how  to analyze  public online presence of scientist are also  welcome. 
+ Further direction for the analysis will depend on participants and availability of data.  The project  description soon be accompanied  by small demo. Other ideas how  to analyze  public online presence of scientists are also  welcome. 
 
 
 **A list of 1-6 key papers / online materials summarising the subject:**
