Project 9 edited description

--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -339,7 +339,7 @@ Can gain experience with biosignal experimental setups.
 
  These questions  are  relevant  not only for disciplines such as sociology of science. Also answers could inform  those, who want to share their research to others in the most effective way. Psychology and neuroscience communities are specially interesting. These fields  are accompanied by transient changes, due to  replication  crisis and methodological discussions.
 
- The project  could use  existing [dataset](<https://www.altmetric.com/blog/twitter-in-scholarly-communication/>) . We will also download relevant  data directly from Twitter to answer  specific problems. Please remember that there are some limitations imposed on  downloading  data from service.  We will process and analyze data   using open  languages like R or Python. We could use  Gephi for visualizations. Example analysis could involve simple graph-theoretical measures to map relation  between different sub-disciplines. 
+ The project  could use  existing [dataset](<https://www.altmetric.com/blog/twitter-in-scholarly-communication/>) . We will also download relevant  data directly from Twitter to answer  specific problems. Please remember that there are some limitations imposed on  downloading  data from the service.  We will process and analyze data   using open  languages like R or Python. We could use  Gephi for visualizations. Example analysis could involve simple graph-theoretical measures to map relation  between different sub-disciplines. 
 
  Further direction for the analysis will depend on participants and availability of data.  The project  description soon be accompanied  by small demo. Other ideas how  to analyze  public online presence of scientists are also  welcome. 
 
