Project 9 edited description

--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -335,7 +335,7 @@ Can gain experience with biosignal experimental setups.
 
 **Abstract:** Many active scientist use online social networks to share their research . Many  of the ideas  shaping modern science are disseminated   this way. Online discussions between  scientists precede and often shape what is  published in journals. 
 
- This project aims to map relations and mutual influence in  online science communities. Is it possible to map the structure of the field and  “hot” topics using mostly Twitter data? How the information about  publications spread? What define that the paper will become  popular (apart scientific merit)?  
+ This project aims to map relations and mutual influence in  online science communities. Is it possible to map the structure of the field and  “hot” topics using mostly Twitter data? How the information about  publications spreads? What define that the paper will become  popular (apart scientific merit)?  
 
  These questions  are  relevant  not only for disciplines such as sociology of science. Also answers could inform  those, who want to share their research to others in the most effective way. Psychology and neuroscience communities are specially interesting. These fields  are accompanied by transient changes, due to  replication  crisis and methodological discussions.
 
