Project 9 edited description

--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -327,7 +327,7 @@ Can gain experience with biosignal experimental setups.
 
 ---
 <a id="project9"></a>
-## Project 9: Mapping the state of modern psychology  through the  public online activity of the scientists
+## Project 9: Mapping the state of modern psychology  through the  public online activity of scientists
 
 #### Authors: Daniel Borek <sup>1</sup> <a href="mailto:dtborek@ugent.be"><i class="fa fa-envelope"></i></a>
 
