Project 9 edited description

--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -335,9 +335,9 @@ Can gain experience with biosignal experimental setups.
 
 **Abstract:** Many active scientists use online social networks to share their research. Many of the ideas shaping modern science are disseminated this way. Online discussions between scientists precede and often shape what is published in journals.
 
-This project aims to map relations and mutual influence in online science communities. Is it possible to map the structure of the field and “hot” topics using mostly Twitter data? How the information about publications spreads? What define that the paper will become popular (apart from scientific merit)?
+This project aims to map relations and mutual influence in online science communities. Psychology and neuroscience communities are especially interesting. These fields are accompanied by transient changes, due to replication crisis and methodological discussions. 
 
-These questions are relevant not only for disciplines such as sociology of science. Also, answers could inform those, who want to share their research with others in the most effective way. Psychology and neuroscience communities are especially interesting. These fields are accompanied by transient changes, due to replication crisis and methodological discussions.
+Is it possible to map the structure of the field and “hot” topics using mostly Twitter data? How the information about publications spreads? What define that the paper will become popular (apart from scientific merit)? These questions are relevant not only for disciplines such as sociology of science. Also, answers could inform those, who want to share their research with others in the most effective way. P
 
 The project could use existing [dataset](<https://www.altmetric.com/blog/twitter-in-scholarly-communication/>). We will also download relevant data directly from Twitter to answer specific problems. Please remember that there are some limitations imposed on downloading data from the service. We will process and analyze data using open languages like R or Python. We could use Gephi for visualizations. Example analysis could involve simple graph-theoretical measures to map the relation between different sub-disciplines.
 
