--- a/_posts/2017-07-05-speakers.md
+++ b/_posts/2017-07-05-speakers.md
@@ -16,12 +16,12 @@ color: white
 {% include speaker-card.html avatarurl="toro.jpg" profilename="Roberto Toro, PhD "  homepage="https://research.pasteur.fr/en/member/roberto-toro/" affiliation="Department of Neuroscience, Institut Pasteur,<br> Paris, France"%}
 
 
-#### TBA
-**Abstract: TBA**
+#### Towards a collaborative neuroscience
+**Abstract:**
+Open Science is a recent movement aiming at giving researchers open access to datasets, tools, pipelines and publications. Science is no longer an ivory tower; it became more inclusive and transparent than ever before. How does research collaboration looks like in times of open science? In this presentation, I will be talking about new tools that we are building to help researchers all around the globe work together. I will also relate to my daily research, including three main research lines in my group: brain development, evolution and Autism Spectrum Disorders.
 
 **Bio:**
-Roberto Toro is a distinguished personality from open science movement with great knowledge on development and evolution of brain anatomy
-He is currently leading a team of students (PhD, MSc) from interdisciplinary backgrounds. They develop computational neuroanatomy methods based on their theoretical models which they use to analyse the normal diversity of human brain anatomy, as well as to look for differences associated with neurodevelopmental pathologies. He is particularly interested in Autism Spectrum Disorders.
+Roberto Toro graduated from a Master’s degree in Universidad Técnica Federico Santa María, Valparaiso, Chile (1997) and Pierre and Marie Curie University, Paris (1998) and obtained a PhD from Pierre and Marie Curie University, Paris (2003). Today, he is a Group Leader at the Institut Pasteur, Paris. Roberto is an expert in the domain of development and evolution of brain anatomy. In his research group, he utilizes mathematical modelling, Magnetic Resonance Imaging and human genetics. The team is oriented at developing computational neuroanatomy methods to analyse the normal diversity of human brain anatomy, and find differences associated with neurodevelopmental pathologies. Roberto is particularly interested in Autism Spectrum Disorders. Roberto is also highly engaged in the open science movement. He was a cofounder of the Brainhack community (Craddock et al., 2016) and he is an awardee of the Open Science Prize 2016 (worth 80k USD) for the Branbox project. He is also currently a member of the OHBM Open Science Special Interest Group, and the Co-Chair of the OHBM Hackathon.
 
 ---
 
